fix: spacing and shadow styling

--- a/my-react-app/src/Components/ContentCard/ContentCard.css
+++ b/my-react-app/src/Components/ContentCard/ContentCard.css
@@ -83,6 +83,7 @@
     align-items: center;
     height: 1.2rem;
     border-radius: 0.6rem;
+    box-shadow: 2px 2px 0.5rem black;
 }
 
 .footer{
@@ -99,8 +100,15 @@
 }
 
 .media-btn{
+    display: inline-flex;
     color: black;
     padding: 0.5rem 0rem 0.5rem 0.5rem;
     margin: 0;
     text-decoration: none;
+    justify-content: space-evenly;
+}
+
+.media-btn span{
+    font-size: 0.8rem;
+    margin-left:2px;
 }
